--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,9 +1,16 @@
 FROM jenkins
 MAINTAINER Edward Guan <285006386@qq.com>
 
-#ENV JENKINS_OPTS="--prefix=/jenkins"
+USER root
+RUN mkdir /var/log/jenkins
+RUN mkdir /var/cache/jenkins
+RUN chown -R jenkins:jenkins /var/log/jenkins
+RUN chown -R jenkins:jenkins /var/cache/jenkins
+USER jenkins
 
-COPY executors.groovy /usr/share/jenkins/ref/init.groovy.d/executors.groovy
+ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war --prefix=/jenkins"
 
-COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
-RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
+#COPY executors.groovy /usr/share/jenkins/ref/init.groovy.d/executors.groovy
+
+#COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
+#RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
