--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -2,10 +2,8 @@ FROM jenkins
 MAINTAINER Edward Guan <285006386@qq.com>
 
 USER root
-RUN mkdir /var/log/jenkins
-RUN mkdir /var/cache/jenkins
-RUN chown -R jenkins:jenkins /var/log/jenkins
-RUN chown -R jenkins:jenkins /var/cache/jenkins
+RUN mkdir -p /var/log/jenkins && chown -R jenkins:jenkins /var/log/jenkins
+RUN mkdir -p /var/cache/jenkins && chown -R jenkins:jenkins /var/cache/jenkins
 USER jenkins
 
 ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war --prefix=/jenkins"
