--- a/artifactory/Dockerfile
+++ b/artifactory/Dockerfile
@@ -1,2 +1,2 @@
-FROM docker.bintray.io/jfrog/artifactory-pro:latest
+FROM docker.bintray.io/jfrog/artifactory-pro
 MAINTAINER Edward Guan <285006386@qq.com>
